chore(release): 1.320.2-prerelease.1684763129986 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.320.1",
+    "version": "1.320.2-prerelease.1684763129986",
     "authors": [
         "BigCommerce"
     ],
