--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.322.1",
+    "version": "1.322.2-prerelease.1685712791770",
     "authors": [
         "BigCommerce"
     ],
