--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.325.2",
+    "version": "1.325.3-prerelease.1686650460443",
     "authors": [
         "BigCommerce"
     ],
