chore(release): 1.327.1-prerelease.1686918070426 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.327.0",
+    "version": "1.327.1-prerelease.1686918070426",
     "authors": [
         "BigCommerce"
     ],
