--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.330.1",
+    "version": "1.330.2-prerelease.1687763354904",
     "authors": [
         "BigCommerce"
     ],
