--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.333.1",
+    "version": "1.333.2-prerelease.1687937363575",
     "authors": [
         "BigCommerce"
     ],
