--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.333.2",
+    "version": "1.333.3-prerelease.1688644074331",
     "authors": [
         "BigCommerce"
     ],
