--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.341.1",
+    "version": "1.341.2-prerelease.1689847147366",
     "authors": [
         "BigCommerce"
     ],
