chore(release): 1.364.2-prerelease.1693227612921 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.364.1",
+    "version": "1.364.2-prerelease.1693227612921",
     "authors": [
         "BigCommerce"
     ],
