--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.360.3",
+    "version": "1.360.4-prerelease.1693302945479",
     "authors": [
         "BigCommerce"
     ],
