--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.375.0",
+    "version": "1.375.1-prerelease.1695647264609",
     "authors": [
         "BigCommerce"
     ],
