--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.384.1",
+    "version": "1.384.2-prerelease.1697455411768",
     "authors": [
         "BigCommerce"
     ],
