chore(release): 1.384.3-prerelease.1697539931681 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.384.2",
+    "version": "1.384.3-prerelease.1697539931681",
     "authors": [
         "BigCommerce"
     ],
