chore(release): 1.388.2-prerelease.1698677888199 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.388.1",
+    "version": "1.388.2-prerelease.1698677888199",
     "authors": [
         "BigCommerce"
     ],
