chore(release): 1.379.4-prerelease.1699450534251 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.379.3",
+    "version": "1.379.4-prerelease.1699450534251",
     "authors": [
         "BigCommerce"
     ],
