chore(release): 1.386.1-prerelease.1699516425353 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.386.0",
+    "version": "1.386.1-prerelease.1699516425353",
     "authors": [
         "BigCommerce"
     ],
