--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.411.1",
+    "version": "1.411.2-prerelease.1704882029371",
     "authors": [
         "BigCommerce"
     ],
