--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.434.0",
+    "version": "1.434.1-prerelease.1706517017806",
     "authors": [
         "BigCommerce"
     ],
