chore(release): 1.440.1-prerelease.1707121849433 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.440.0",
+    "version": "1.440.1-prerelease.1707121849433",
     "authors": [
         "BigCommerce"
     ],
