chore(release): 1.445.1-prerelease.1709028261431 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.445.0",
+    "version": "1.445.1-prerelease.1709028261431",
     "authors": [
         "BigCommerce"
     ],
