chore(release): 1.457.2-prerelease.1710500534455 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.457.1",
+    "version": "1.457.2-prerelease.1710500534455",
     "authors": [
         "BigCommerce"
     ],
