chore(release): 1.458.1-prerelease.1711013238575 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.458.0",
+    "version": "1.458.1-prerelease.1711013238575",
     "authors": [
         "BigCommerce"
     ],
