--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.458.0",
+    "version": "1.458.1-prerelease.1711365247518",
     "authors": [
         "BigCommerce"
     ],
