chore(release): 1.464.3-prerelease.1712048629965 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.464.2",
+    "version": "1.464.3-prerelease.1712048629965",
     "authors": [
         "BigCommerce"
     ],
