chore(release): 1.494.5-prerelease.1717620681928 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.494.4",
+    "version": "1.494.5-prerelease.1717620681928",
     "authors": [
         "BigCommerce"
     ],
