--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.532.0",
+    "version": "1.532.1-prerelease.1728479869848",
     "authors": [
         "BigCommerce"
     ],
