chore(release): 1.534.5-prerelease.1729505223196 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.534.4",
+    "version": "1.534.5-prerelease.1729505223196",
     "authors": [
         "BigCommerce"
     ],
