chore(release): 1.542.1-prerelease.1730797171092 [skip ci]

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.542.0",
+    "version": "1.542.1-prerelease.1730797171092",
     "authors": [
         "BigCommerce"
     ],
