--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.542.1",
+    "version": "1.542.2-prerelease.1730821789623",
     "authors": [
         "BigCommerce"
     ],
