--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.542.2",
+    "version": "1.542.3-prerelease.1730924043604",
     "authors": [
         "BigCommerce"
     ],
